# Sharpy

./: .env.example  .gitignore  .replit  DEPLOYMENT_GUIDE.md  README.md  app.py  deploy_to_github.sh  pyproject.toml  replit.md  run_app.bat  run_app.sh  setup.py  technical_notes.md
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
attached_assets/: Pasted-Sharpy-App-Features-Requirement-User-End-1-Authentication-via-mobile-number-OTP-Once-register-1753162069279_1753162069279.txt
deploy_package/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.py  render.yaml  render_requirements.txt
deploy_package/pages/: 2_Journey.py  4_Shorts.py
deploy_package/utils/: database.py
pages/: 1_Data_Import.py  2_AI_Analysis.py  3_Visualizations.py  4_Code_Export.py  5_Share_Export.py
sharpy-educational-app-download/: README.md  app.py  package_requirements.txt
sharpy-educational-app-download/pages/: 1_Courses.py  3_Notifications.py
sharpy-educational-app-download/utils/: auth.py  otp_manager.py
utils/: ai_analyzer.py  code_generator.py  data_loader.py  database.py  visualization.py
